feat(TicketItemMapper.java): move ticket dto mapper to a mapper class