@@ -3,6 +3,7 @@ package ir.ac.kntu.abusafar.service.impl;
 import ir.ac.kntu.abusafar.dto.location.LocationResponseDTO;
 import ir.ac.kntu.abusafar.dto.ticket.TicketSearchRequestDTO;
 import ir.ac.kntu.abusafar.dto.ticket.TicketResultItemDTO;
+import ir.ac.kntu.abusafar.mapper.custom.TicketItemMapper;
 import ir.ac.kntu.abusafar.model.Ticket;
 import ir.ac.kntu.abusafar.model.Trip;
 import ir.ac.kntu.abusafar.repository.TicketDAO;
@@ -81,50 +82,10 @@ public class TicketSearchServiceImpl implements TicketSearchService {
         if (foundTickets.isEmpty()) {
             return Collections.emptyList();
         }
-
         return foundTickets.stream()
-                .map(this::mapTicketToResultItemDTO)
-                .collect(Collectors.toList());
+                .map(TicketItemMapper.INSTANCE::toDTO)
+                .toList();
     }
 
-    @Override
-    public TicketResultItemDTO mapTicketToResultItemDTO(Ticket ticket) {
-        if (ticket == null || ticket.getTrip() == null) {
-            return null; // Or throw an error
-        }
-        Trip trip = ticket.getTrip();
 
-        String originCityName = "Unknown";
-        if (trip.getOriginLocationId() != null) {
-            Optional<LocationResponseDTO> originLocOpt = locationService.getLocationById(trip.getOriginLocationId());
-            if (originLocOpt.isPresent()) {
-                originCityName = originLocOpt.get().getCity();
-            } else {
-                System.err.println("Warning: Could not find location details for origin ID: " + trip.getOriginLocationId());
-            }
-        }
-
-        String destinationCityName = "Unknown";
-        if (trip.getDestinationLocationId() != null) {
-            Optional<LocationResponseDTO> destLocOpt = locationService.getLocationById(trip.getDestinationLocationId());
-            if (destLocOpt.isPresent()) {
-                destinationCityName = destLocOpt.get().getCity();
-            } else {
-                System.err.println("Warning: Could not find location details for destination ID: " + trip.getDestinationLocationId());
-            }
-        }
-
-        TicketResultItemDTO dto = new TicketResultItemDTO();
-        dto.setTripId(trip.getTripId());
-        dto.setAge(ticket.getAge());
-        dto.setOriginCity(originCityName);
-        dto.setDestinationCity(destinationCityName);
-        dto.setDepartureTimestamp(trip.getDepartureTimestamp());
-        dto.setArrivalTimestamp(trip.getArrivalTimestamp());
-        dto.setTripVehicle(ticket.getTripVehicle());
-        dto.setPrice(ticket.getPrice());
-        dto.setVehicleCompany(trip.getVehicleCompany());
-
-        return dto;
-    }
 }
